--- a/resources/css/_tp-grid.less
+++ b/resources/css/_tp-grid.less
@@ -58,7 +58,7 @@
 }
 
 .tp-column-fullwidth {
-  @extend .small-12;
-  @extend .tp-columns;
-  @extend .tp-column;
+  &:extend(.small-12);
+  &:extend(.tp-columns);
+  &:extend(.tp-column);
 }
